@@ -22,7 +22,7 @@ $line
  #end for
 
  #for $author in $rel.authors
-  #if $author.revisions and not $author.revisions[0].lines
+  #if not $author.visible
     #continue
   #end if
   ##alternatively, one could use:
